# ORGVault

./: README.md
Client/: Cargo.toml
Client/src/: encryption.rs  file_watcher.rs  main.rs  metadata.rs  simple_sync.rs  sync_client.rs
Client/static/: index.html
Client/static/css/: styles.css
Client/static/js/: app.js
Server/: Cargo.toml  server_config.json
Server/admin/: index.html
Server/src/: admin.rs  auth.rs  config.rs  folder_scanner.rs  main.rs  server.rs  webServer.rs  web_admin.rs
Server/static/: admin.html  index.html
Server/static/css/: admin.css
Server/static/js/: admin.js
