[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
dirs = "5.0"
walkdir = "2.0"
urlencoding = "2.0"
derive_more = "0.99"
mac_address = "1.1"