[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
base64 = "0.21"
walkdir = "2.0"
sha2 = "0.10"
urlencoding = "2.0"
anyhow = "1.0"  # Add this line